--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,13 +5,23 @@
         <a href="/">仿网易云音乐</a>
       </h1>
       <ul>
-        <li>发现音乐</li>
+        <li class='liHover'>发现音乐</li>
         <li>我的音乐</li>
         <li>朋友</li>
         <li>商城</li>
         <li>音乐人</li>
-        <li>下载客户端</li>
+        <li>下载客户端
+          <span class='hot'></span>
+        </li>
       </ul>
+      <div class='login'>登录
+        <span class='inner'></span>
+      </div>
+      <div class='topvd'>视频投稿
+      </div>
+      <div class='search'>
+        <input type="text" placeholder="音乐/电台/用户">
+      </div>
     </div>
   </div>
 </div>
