--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -36,6 +36,79 @@
           padding: 0 19px;
           cursor: pointer;
         }
+        .liHover{
+          color: #fff;
+          background-color: #000;
+        }
+        :nth-last-child(1){
+          position: relative;
+          .hot{
+            position: absolute;
+            top: 50%;
+            right: -20px;
+            margin-top: -12px;
+            background: url('../assets/images/topbar.png') -190px 0 no-repeat;
+            width: 28px;
+            height: 19px;
+          }
+        }
+      }
+      .login{
+        float: right;
+        width: 50px;
+        height: 69px;
+        color: #787878;
+        line-height: 69px;
+        font-size: 12px;
+        margin-left: 20px;
+        position: relative;
+        cursor: pointer;
+        .inner{
+          position: absolute;
+          top: 50%;
+          right: 0;
+          margin-top: -8px;
+          background: url('../assets/images/topbar.png') -220px -55px no-repeat;
+          width: 28px;
+          height: 16px;
+        }
+      }
+      .topvd{
+        float: right;
+        width: 90px;
+        height: 32px;
+        color: #ccc;
+        cursor: pointer;
+        box-sizing: border-box;
+        padding-left: 32px;
+        margin-top: 19px;
+        margin-left: 12px;
+        font-size: 12px;
+        line-height: 33px;
+        background: url('../assets/images/topbar.png') 0 -140px no-repeat;
+      }
+      .topvd:hover{
+        background-position: -100px -140px;
+      }
+      .search{
+        float: right;
+        width: 158px;
+        height: 32px;
+        margin-top: 19px;
+        box-sizing: border-box;
+        padding-left: 30px;
+        padding-top: 5px;
+        border-radius: 16px;
+        overflow: hidden;
+        background: url('../assets/images/topbar.png') 0 -99px no-repeat;
+        background-color: #fff;
+        &>input{
+          outline: none;
+          width: 100%;
+          height: 18px;
+          font-size: 12px;
+          line-height: 18px;
+        }
       }
     }
   }
