--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,9 @@
         <a href="/">仿网易云音乐</a>
       </h1>
       <ul>
-        <li class='liHover'>发现音乐</li>
-        <li>我的音乐</li>
-        <li>朋友</li>
+        <li routerLink='/home' class='liHover'>发现音乐</li>
+        <li routerLink='/myMusic'>我的音乐</li>
+        <li routerLink='/friend'>朋友</li>
         <li>商城</li>
         <li>音乐人</li>
         <li>下载客户端
@@ -24,4 +24,5 @@
       </div>
     </div>
   </div>
+  <router-outlet></router-outlet>
 </div>
