--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -35,6 +35,7 @@
           font-size: 14px;
           padding: 0 19px;
           cursor: pointer;
+          outline: none;
         }
         .liHover{
           color: #fff;
