--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,16 +4,7 @@
       <h1 class='logo'>
         <a href="/">仿网易云音乐</a>
       </h1>
-      <ul>
-        <li routerLink='/home' class='liHover'>发现音乐</li>
-        <li routerLink='/myMusic'>我的音乐</li>
-        <li routerLink='/friend'>朋友</li>
-        <li>商城</li>
-        <li>音乐人</li>
-        <li>下载客户端
-          <span class='hot'></span>
-        </li>
-      </ul>
+      <app-navbar></app-navbar>
       <div class='login'>登录
         <span class='inner'></span>
       </div>
