Mod 顶部导航栏及附属导航栏

--- a/src/app/navbar/main-navbar/main-navbar.component.scss
+++ b/src/app/navbar/main-navbar/main-navbar.component.scss
@@ -21,7 +21,7 @@
       margin-left: -6px;
       width: 12px;
       height: 7px;
-      background: url('../../assets/images/topbar.png') -226px 0 no-repeat;
+      background: url('../../../assets/images/topbar.png') -226px 0 no-repeat;
     }
   }
   li:hover{
@@ -39,7 +39,7 @@
       top: 50%;
       right: -20px;
       margin-top: -12px;
-      background: url('../../assets/images/topbar.png') -190px 0 no-repeat;
+      background: url('../../../assets/images/topbar.png') -190px 0 no-repeat;
       width: 28px;
       height: 19px;
     }
