--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <h1 class='logo'>
         <a href="/">仿网易云音乐</a>
       </h1>
-      <app-navbar></app-navbar>
+      <app-main-navbar></app-main-navbar>
       <div class='login'>登录
         <span class='inner'></span>
       </div>
